appId: ${APP_ID}
name: "H100 | Menu | TC009 - Guest Schedule Care"

onFlowStart:
  - runScript: ../../screens/SearchAndNav/searchNavObjects.js
---
# Flow: Menu navigation and verification for schedule care in guest flow
- runFlow: ../../subflows/Common/launchApp.yaml
- runFlow: ../../subflows/Account/onboarding/h100_continue_to_sign_options.yaml
- tapOn: ${output.account_health100_onboarding.continueAsAGuest}
- runFlow: ../../subflows/Home/homescreen_loaded_successful.yaml
- waitForAnimationToEnd
- runFlow: ../../subflows/Menu/navigateViaMenu.yaml
- waitForAnimationToEnd
- takeScreenshot: Menu_Pic
- assertVisible: ${output.explore_more_menu.scheduleCareBtn}
- tapOn: ${output.explore_more_menu.scheduleCareBtn}
- waitForAnimationToEnd
- assertVisible: ${output.searchnav_secondary_tabs.findCareTab}
- takeScreenshot: Schedule_Care_Guest