appId: ${APP_ID}
name: "H100 | Menu | TC026 - Login Menu Navs"
tags:
  - loginMenu
  - smoke
  - H100
onFlowStart:
  - runScript: ../../screens/SearchAndNav/searchNavObjects.js
---
# Flow: Menu navigation and verification for Prescriptions
- runFlow: ../../subflows/Common/launchAndSetup.yaml
- runScript:
    file: ../../config/credentials-loader.js
    env:
      loginData: DEAN_FANT
      BUILD_CONFIG: ${BUILD_CONFIG}
- runFlow:
    file: ../../subflows/Account/authentication/login.yaml

- runFlow:
    file: ../../subflows/Common/dismissOverlays.yaml
- waitForAnimationToEnd
- runFlow: ../../subflows/Menu/navigateViaMenu.yaml
- waitForAnimationToEnd

- takeScreenshot: Menu_Pic

# Health records screen
- scrollUntilVisible:
    element: ${output.menu_screen.healthRecordsLnk}
    speed: 40
- assertVisible: ${output.menu_screen.healthRecordsLnk}
- tapOn: ${output.menu_screen.healthRecordsLnk}
- assertVisible: "(?i).*(Health|Healthy|updates|resources|Resources).*"
- takeScreenshot: Health_records
- tapOn: ${output.common_navigation.homeTab}
- waitForAnimationToEnd

- runFlow: ../../subflows/Menu/navigateViaMenu.yaml
- waitForAnimationToEnd
- runFlow:
    when:
      notVisible: ${output.menu_screen.menuOpenBtn}
    commands:
      - tapOn:
          text: "Show Menu"
      - waitForAnimationToEnd

# Health services screen (formerly Schedule care)
- assertVisible: ${output.menu_screen.healthServicesLnk}
- tapOn: ${output.menu_screen.healthServicesLnk}
- assertVisible: ${output.searchnav_secondary_tabs.findCareTab}

- takeScreenshot: Test_complete

