# TC013: Explore More Menu Support & FAQ as Signed In User (Health100)
appId: ${APP_ID}
name: "H100 | Search and Nav | TC013 - Explore More Support Faq Signed In"
tags:
  - searchAndNav
onFlowStart:
  - runScript: ../../screens/Account/accountObjects.js
  - runScript: ../../screens/Account/OnboardingScreen.js
  - runScript: ../../screens/Home/homescreenObjects.js
  - runScript: ../../screens/SearchAndNav/searchNavObjects.js
  - runScript: ../../screens/SearchAndNav/SNAPPScreen.js
  - runScript: ../../screens/Common/CommonScreen.js
  - runScript:
      file: ../../config/credentials-loader.js
      env:
        loginData: DEAN_FANT
        BUILD_CONFIG: ${BUILD_CONFIG}
---
- runFlow: ../../subflows/Common/launchAndSetup.yaml
- runFlow: ../../subflows/Account/authentication/login.yaml
- runFlow: ../../subflows/Common/dismissOverlays.yaml

- waitForAnimationToEnd

- runFlow:
    file: ../../subflows/SearchAndNav/openExploreMoreMenu.yaml

- swipe:
    direction: UP

- assertVisible: ${output.explore_more_menu.supportAndFAQBtn}
- tapOn: ${output.explore_more_menu.supportAndFAQBtn}

- waitForAnimationToEnd
- runFlow:
    when:
      visible: ${output.common_buttons.closeBtn}
    commands:
      - tapOn: ${output.common_buttons.closeBtn}
- assertVisible: ${output.search_help_center.helpCenterTitle}
- assertVisible: ${output.snapp_navigation.helpCenterPopularQuestionsTitle}
- assertVisible: ${output.snapp_navigation.helpCenterHowCanWeHelpTitle}
- tapOn: ${output.common_buttons.backBtn}
- waitForAnimationToEnd
