# TC033: Side Menu Health Services as Guest User (Health100)
appId: ${APP_ID}
name: "H100 | Search and Nav | TC033 - Side Menu Health Services Guest"
tags:
    - searchAndNav
onFlowStart:
    - runScript: ../../screens/Account/accountObjects.js
    - runScript: ../../screens/Account/OnboardingScreen.js
    - runScript: ../../screens/Home/homescreenObjects.js
    - runScript: ../../screens/Health/MinuteClinicSchedulingScreen.js
    - runScript: ../../screens/SearchAndNav/searchNavObjects.js
---
- runFlow: ../../subflows/Common/launchApp.yaml
- runFlow: ../../subflows/Account/onboarding/h100_continue_to_sign_options.yaml
- tapOn: ${output.account_health100_onboarding.continueAsAGuest}
- runFlow: ../../subflows/Home/homescreen_loaded_successful.yaml

- runFlow:
    file: ../../subflows/SearchAndNav/openSideMenu.yaml

- assertVisible: ${output.menu_screen.healthServicesLnk}
- tapOn: ${output.menu_screen.healthServicesLnk}

- waitForAnimationToEnd
- assertVisible: ${output.health_scheduling.findCareLabel}
- assertVisible: ${output.health_scheduling.findTheCareYouNeed}
- assertVisible: ${output.common_buttons.backBtn}
- tapOn: ${output.common_buttons.backBtn}
- waitForAnimationToEnd
