# TC034: Side Menu Vaccinations as Guest User (Health100)
appId: ${APP_ID}
name: "H100 | Search and Nav | TC034 - Side Menu Vaccinations Guest"
tags:
    - searchAndNav
onFlowStart:
    - runScript: ../../screens/Account/accountObjects.js
    - runScript: ../../screens/Account/OnboardingScreen.js
    - runScript: ../../screens/Home/homescreenObjects.js
    - runScript: ../../screens/Health/MinuteClinicSchedulingScreen.js
    - runScript: ../../screens/SearchAndNav/searchNavObjects.js
---
- runFlow: ../../subflows/Common/launchApp.yaml
- runFlow: ../../subflows/Account/onboarding/h100_continue_to_sign_options.yaml
- tapOn: ${output.account_health100_onboarding.continueAsAGuest}
- runFlow: ../../subflows/Home/homescreen_loaded_successful.yaml

- runFlow:
    file: ../../subflows/SearchAndNav/openSideMenu.yaml

- assertVisible: ${output.menu_screen.vaccinationsLnk}
- tapOn: ${output.menu_screen.vaccinationsLnk}

- waitForAnimationToEnd
- assertVisible: ${output.health_scheduling.scheduleCareLabel}
- assertVisible: ${output.health_scheduling.signInForSchedulingLabel}
- assertVisible: ${output.common_buttons.backBtn}
- tapOn: ${output.common_buttons.backBtn}
- waitForAnimationToEnd
